src/snapshots/glass__codegen_tests__lambda_capture_unit_clone.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
globals
    // SoA arrays for type Msg
    unit array glass_Msg_Hit_source
    unit array glass_Msg_Hit_target
    real array glass_Msg_Hit_amount
    integer array glass_Msg_free
    integer glass_Msg_free_top = 0
    integer glass_Msg_count = 0
    // Captures for closure 0
    unit array glass_clos0_caster
    real array glass_clos0_dmg
    integer array glass_clos0_free
    integer glass_clos0_free_top = 0
    integer glass_clos0_count = 0
endglobals

function glass_Msg_alloc takes nothing returns integer
    local integer id
    if glass_Msg_free_top > 0 then
        set glass_Msg_free_top = glass_Msg_free_top - 1
        set id = glass_Msg_free[glass_Msg_free_top]
    else
        set glass_Msg_count = glass_Msg_count + 1
        set id = glass_Msg_count
    endif
    return id
endfunction

function glass_Msg_dealloc takes integer id returns nothing
    set glass_Msg_Hit_source [id] = null
    set glass_Msg_Hit_target [id] = null
    set glass_Msg_free[glass_Msg_free_top] = id
    set glass_Msg_free_top = glass_Msg_free_top + 1
endfunction

function glass_new_Msg_Hit takes unit p_source, unit p_target, real p_amount returns integer
    local integer id = glass_Msg_alloc()
    set glass_Msg_Hit_source [id] = p_source
    set glass_Msg_Hit_target [id] = p_target
    set glass_Msg_Hit_amount [id] = p_amount
    return id
endfunction

function glass_clos0_alloc takes nothing returns integer
    local integer id
    if glass_clos0_free_top > 0 then
        set glass_clos0_free_top = glass_clos0_free_top - 1
        set id = glass_clos0_free[glass_clos0_free_top]
    else
        set glass_clos0_count = glass_clos0_count + 1
        set id = glass_clos0_count
    endif
    return id
endfunction

function glass_clos0_dealloc takes integer id returns nothing
    set glass_clos0_free[glass_clos0_free_top] = id
    set glass_clos0_free_top = glass_clos0_free_top + 1
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_make_aoe takes unit caster, real dmg returns integer
    local integer glass_tmp_0
    set glass_tmp_0 = glass_clos0_alloc()
    set glass_clos0_caster[glass_tmp_0] = caster
    set glass_clos0_dmg[glass_tmp_0] = dmg
    set caster = null
    return (0 * 8192 + glass_tmp_0)
endfunction


function glass_dispatch_0 takes integer glass_closure returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    return 0
endfunction

function glass_dispatch_1_unit takes integer glass_closure, unit glass_p0 returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    local unit caster
    local real dmg
    local unit u
    if glass_tag == 0 then
        set caster = glass_clos0_caster[glass_cid]
        set dmg = glass_clos0_dmg[glass_cid]
        set u = glass_p0
        return glass_new_Msg_Hit(caster, u, dmg)
    endif
    return 0
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return glass_dispatch_0(glass_closure)
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_make_aoe(caster, dmg)
    return function(u) return {source = caster, target = u, amount = dmg} end
end
