src/snapshots/glass__codegen_tests__lambda_void.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_lambda_0 takes integer glass_clos_id returns integer
    return 42
endfunction

function glass_dispatch_0 takes integer glass_closure returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    if glass_tag == 0 then
        return glass_lambda_0(glass_cid)
    endif
    return 0
endfunction

function glass_dispatch_1 takes integer glass_closure, integer glass_p0 returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    return 0
endfunction

function glass_dispatch_2 takes integer glass_closure, integer glass_p0, integer glass_p1 returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    return 0
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return glass_dispatch_0(glass_closure)
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_test takes nothing returns integer
    return (0 * 8192)
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_test()
    return function() return 42 end
end
