src/snapshots/glass__codegen_tests__lambda_with_capture.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
globals
    // Captures for closure 0
    integer array glass_clos0_y
    integer array glass_clos0_free
    integer glass_clos0_free_top = 0
    integer glass_clos0_count = 0
endglobals

function glass_clos0_alloc takes nothing returns integer
    local integer id
    if glass_clos0_free_top > 0 then
        set glass_clos0_free_top = glass_clos0_free_top - 1
        set id = glass_clos0_free[glass_clos0_free_top]
    else
        set glass_clos0_count = glass_clos0_count + 1
        set id = glass_clos0_count
    endif
    return id
endfunction

function glass_clos0_dealloc takes integer id returns nothing
    set glass_clos0_free[glass_clos0_free_top] = id
    set glass_clos0_free_top = glass_clos0_free_top + 1
endfunction

function glass_lambda_0 takes integer glass_clos_id, integer x returns integer
    local integer y = glass_clos0_y[glass_clos_id]
    return (x + y)
endfunction

function glass_dispatch_0 takes integer glass_closure returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    return 0
endfunction

function glass_dispatch_1 takes integer glass_closure, integer glass_p0 returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    if glass_tag == 0 then
        return glass_lambda_0(glass_cid, glass_p0)
    endif
    return 0
endfunction

function glass_dispatch_2 takes integer glass_closure, integer glass_p0, integer glass_p1 returns integer
    local integer glass_tag = glass_closure / 8192
    local integer glass_cid = glass_closure - glass_tag * 8192
    return 0
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return glass_dispatch_0(glass_closure)
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_test takes integer y returns integer
    local integer glass_tmp_0
    set glass_tmp_0 = glass_clos0_alloc()
    set glass_clos0_y[glass_tmp_0] = y
    return (0 * 8192 + glass_tmp_0)
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_test(y)
    return function(x) return (x + y) end
end
