src/snapshots/glass__codegen_tests__let_binding.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_test takes nothing returns integer
    local integer x
    set x = 5
    return x
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_test()
    local x = 5
    return x
end
