src/snapshots/glass__codegen_tests__list_cons.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_prepend takes integer x, integer xs returns integer
    return glass_List_integer_cons(x, xs)
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_prepend(x, xs)
    return {head = x, tail = xs}
end
