src/snapshots/glass__codegen_tests__method_call.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_test takes unit h returns boolean
    set h = null
    return glass_is_alive()
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_test(h)
    return glass_is_alive()
end
